# monata

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/monata/: __init__.py  __main__.py  _config.py  _home.py  _json.py  _paths.py  _types.py  category.py  cell.py  cli.py  corner.py  errors.py  examples.py  library.py  physics.py  projection.py  registry.py  spice_library.py  units.py
tests/: conftest.py  test_cell.py  test_cir2py.py  test_circuit_construction.py  test_declarative_views.py  test_foundation_closed_loop.py  test_generation.py  test_integration.py  test_measure_freq_domain.py  test_measure_result.py  test_measure_spec.py  test_models_cache.py  test_models_external_artifacts.py  test_models_resolver.py  test_netlist_construction.py  test_netlist_mutation_surface.py  test_netlist_rendering.py  test_ngspice_shared.py  test_optim_bayesian.py  test_paths.py  test_physics.py  test_public_api.py  test_registry.py  test_schematic_data.py  test_sim_analysis_spec.py  test_sim_artifacts.py  test_sim_backend_native_artifact_parsing.py  test_sim_backend_native_failure_handling.py  test_sim_backend_native_planning.py  test_sim_backend_native_subprocess.py  test_sim_cache.py  test_sim_corner.py  test_sim_digital_result_extraction.py  test_sim_digital_task_construction.py  test_sim_digital_timing_claims.py  test_sim_digital_truth_table_spec.py  test_sim_executor.py  test_sim_export_hdf5.py  test_sim_rawfile.py  test_sim_results_analysis.py  (+16 more)
tests/core/: test_cell.py  test_cli_doctor.py  test_errors.py  test_examples.py  test_library.py  test_public_api.py
tests/integration/: test_foundation_closed_loop.py  test_p4_workflow.py
tests/measure/: test_measure_calculus.py  test_measure_statistics.py  test_measure_summary.py  test_measure_time_domain.py
tests/models/: test_models_cache.py  test_models_compiler.py  test_models_external_artifacts.py  test_models_resolver.py  test_models_schema.py
tests/netlist/: test_netlist_mutation.py  test_netlist_roundtrip_parser.py  test_netlist_schema_topology.py
tests/optim/: test_optim_base.py  test_optim_circuit.py  test_optim_nsga2.py
tests/sim/: test_clocked_sequence.py  test_ngspice_rawfile.py  test_sim_artifacts.py  test_sim_backend_native_failure_handling.py  test_sim_corner.py  (+11 more)
(+162 files in other folders)
